Update service configurations, add database migrations, and improve CORS and health check endpoints

--- a/backend/services/auth-service/src/main/resources/application-dev.properties
+++ b/backend/services/auth-service/src/main/resources/application-dev.properties
@@ -16,6 +16,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Disable Flyway for H2 (dev uses in-memory database)
+spring.flyway.enabled=false
+
 jwt.secret=dev-secret-key-minimum-32-characters-for-hs256-algorithm
 jwt.expiration=86400000
 
