--- a/backend/services/user-service/src/main/resources/application.properties
+++ b/backend/services/user-service/src/main/resources/application.properties
@@ -10,8 +10,15 @@ spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+# Use Flyway for migrations instead of Hibernate auto-ddl
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-on-migrate=true
+spring.flyway.table=flyway_schema_history_user
 
 jwt.secret=${JWT_SECRET:your-secret-key-change-in-production-minimum-32-characters-for-hs256}
