--- a/backend/services/chat-service/package.json
+++ b/backend/services/chat-service/package.json
@@ -4,7 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "migrate": "node-pg-migrate",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "migrate:create": "node-pg-migrate create"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "ws": "^8.14.2",
-    "amqplib": "^0.10.3"
+    "amqplib": "^0.10.3",
+    "node-pg-migrate": "^6.2.2"
   }
 }
