--- a/backend/services/story-service/package.json
+++ b/backend/services/story-service/package.json
@@ -4,7 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "migrate": "node-pg-migrate",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "migrate:create": "node-pg-migrate create"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,6 +16,7 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "node-pg-migrate": "^6.2.2"
   }
 }
