--- a/backend/services/user-service/pom.xml
+++ b/backend/services/user-service/pom.xml
@@ -63,6 +63,11 @@
             <version>0.12.3</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- Flyway for database migrations -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
