ci: add dev branch to workflows and enhance CI/CD with industrial practices
- Add dev branch to all workflow triggers (ci, code-quality, security-scan)
- Add security scanning workflow (dependency scan, secret scan, Docker scan)
- Add PR validation workflow (title format, merge conflicts, file size checks)
- Add dependency update check workflow (weekly schedule)
- Add timeout configurations to prevent hanging jobs
- Add continue-on-error for non-critical checks
- Improve error handling and job dependencies
- Add workflow_dispatch for manual triggers

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,9 +2,9 @@ name: Code Quality
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, dev ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop, dev ]
   workflow_dispatch:
 
 jobs:
