--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,14 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, dev]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, dev]
+  workflow_dispatch:
 
 env:
-  NODE_VERSION: '18'
-  JAVA_VERSION: '17'
+  NODE_VERSION: "18"
+  JAVA_VERSION: "17"
 
 jobs:
   # Frontend - Lint, Build, and Type Check
@@ -18,7 +19,7 @@ jobs:
     defaults:
       run:
         working-directory: ./frontend
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,7 +38,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
       - name: Setup Node.js (without cache)
@@ -57,13 +58,16 @@ jobs:
 
       - name: Lint
         run: npm run lint
+        continue-on-error: true
 
       - name: Type check
         run: npx tsc --noEmit
+        timeout-minutes: 5
 
       - name: Build
         run: npm run build
-        
+        timeout-minutes: 10
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -106,7 +110,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: ${{ matrix.lockfile }}
 
       - name: Setup Node.js (without cache)
@@ -169,12 +173,13 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'temurin'
-          cache: 'maven'
+          distribution: "temurin"
+          cache: "maven"
           cache-dependency-path: backend/services/${{ matrix.service }}/pom.xml
 
       - name: Run Maven tests
         run: mvn clean test
+        timeout-minutes: 15
         env:
           SPRING_PROFILES_ACTIVE: test
           DB_HOST: localhost
@@ -185,7 +190,8 @@ jobs:
 
       - name: Build JAR
         run: mvn clean package -DskipTests
-        
+        timeout-minutes: 10
+
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
         with:
@@ -244,13 +250,14 @@ jobs:
           tags: chat-platform/${{ matrix.service }}:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
+        timeout-minutes: 15
 
   # Integration Test (optional - runs docker-compose build)
   integration-test:
     name: Integration Test
     runs-on: ubuntu-latest
     needs: [docker-build]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev')
 
     steps:
       - name: Checkout code
@@ -289,7 +296,7 @@ jobs:
             exit 1
           fi
           echo "✅ All CI checks passed successfully!"
-          
+
       - name: Summary
         run: |
           echo "## CI Pipeline Status ✅" >> $GITHUB_STEP_SUMMARY
@@ -300,4 +307,3 @@ jobs:
           echo "| Node.js Services | ${{ needs.nodejs-services.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Java Services | ${{ needs.java-services.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Docker Builds | ${{ needs.docker-build.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-
