--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -2,18 +2,18 @@ name: Security Scan
 
 on:
   push:
-    branches: [ main, develop, dev ]
+    branches: [main, dev]
   pull_request:
-    branches: [ main, develop, dev ]
+    branches: [main, dev]
   schedule:
-    - cron: '0 0 * * 1' # Weekly on Monday
+    - cron: "0 0 * * 1" # Weekly on Monday
   workflow_dispatch:
 
 jobs:
   dependency-scan:
     name: Dependency Vulnerability Scan
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,9 +33,9 @@ jobs:
       - name: Run Maven dependency check (Java Services)
         uses: dependency-check/Dependency-Check_Action@main
         with:
-          project: 'chat-platform'
-          path: '.'
-          format: 'HTML'
+          project: "chat-platform"
+          path: "."
+          format: "HTML"
           args: >
             --scan backend/services/auth-service
             --scan backend/services/user-service
@@ -45,7 +45,7 @@ jobs:
   secret-scan:
     name: Secret Scanning
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -64,7 +64,7 @@ jobs:
     name: Docker Image Security Scan
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -78,16 +78,15 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'image'
-          scan-ref: 'frontend:scan,api-gateway:scan'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          scan-type: "image"
+          scan-ref: "frontend:scan,api-gateway:scan"
+          format: "sarif"
+          output: "trivy-results.sarif"
+          severity: "CRITICAL,HIGH"
         continue-on-error: true
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
         continue-on-error: true
-
