fix: skip husky installation in CI environments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,10 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_VERSION: "18"
-  JAVA_VERSION: "17"
+  NODE_VERSION: '18'
+  JAVA_VERSION: '17'
+  CI: 'true'
+  HUSKY: '0'
 
 jobs:
   # Frontend - Lint, Build, and Type Check
@@ -38,7 +40,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
+          cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
       - name: Setup Node.js (without cache)
@@ -110,7 +112,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
+          cache: 'npm'
           cache-dependency-path: ${{ matrix.lockfile }}
 
       - name: Setup Node.js (without cache)
@@ -173,8 +175,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
-          distribution: "temurin"
-          cache: "maven"
+          distribution: 'temurin'
+          cache: 'maven'
           cache-dependency-path: backend/services/${{ matrix.service }}/pom.xml
 
       - name: Run Maven tests
