--- a/backend/services/user-service/src/main/resources/application.properties
+++ b/backend/services/user-service/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=true
 spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.baseline-description=Initial baseline
 spring.flyway.table=flyway_schema_history_user
 
 jwt.secret=${JWT_SECRET:your-secret-key-change-in-production-minimum-32-characters-for-hs256}
