--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main, dev]
   schedule:
-    - cron: "0 0 * * 1" # Weekly on Monday
+    - cron: '0 0 * * 1' # Weekly on Monday
   workflow_dispatch:
 
 jobs:
@@ -33,9 +33,9 @@ jobs:
       - name: Run Maven dependency check (Java Services)
         uses: dependency-check/Dependency-Check_Action@main
         with:
-          project: "chat-platform"
-          path: "."
-          format: "HTML"
+          project: 'chat-platform'
+          path: '.'
+          format: 'HTML'
           args: >
             --scan backend/services/auth-service
             --scan backend/services/user-service
@@ -78,15 +78,15 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: "image"
-          scan-ref: "frontend:scan,api-gateway:scan"
-          format: "sarif"
-          output: "trivy-results.sarif"
-          severity: "CRITICAL,HIGH"
+          scan-type: 'image'
+          scan-ref: 'frontend:scan,api-gateway:scan'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
         continue-on-error: true
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: "trivy-results.sarif"
+          sarif_file: 'trivy-results.sarif'
         continue-on-error: true
