feat: implement rate limiting, caching, and request queuing
- Add Redis-based rate limiting at API Gateway (per-user & per-IP)
- Implement caching layer for User, Chat, Auth, and Story services
- Add request queuing middleware for high-priority operations
- Integrate RabbitMQ for async operations
- Update docker-compose with Redis service and configurations
- Add Redis dependencies and configurations to all services

Breaking changes: None
Features: Rate limiting, Distributed caching, Request queuing

--- a/backend/services/auth-service/src/main/resources/application.properties
+++ b/backend/services/auth-service/src/main/resources/application.properties
@@ -25,4 +25,9 @@ spring.flyway.baseline-version=0
 spring.flyway.baseline-description=Initial baseline
 
 jwt.secret=${JWT_SECRET:your-secret-key-change-in-production-minimum-32-characters-for-hs256}
+
+# Redis configuration for caching
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
 jwt.expiration=${JWT_EXPIRATION:86400000}
