--- a/backend/services/chat-service/package.json
+++ b/backend/services/chat-service/package.json
@@ -11,6 +11,7 @@
     "migrate:create": "node-pg-migrate create"
   },
   "dependencies": {
+    "redis": "^4.6.12",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
