--- a/backend/services/user-service/src/main/resources/application.properties
+++ b/backend/services/user-service/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.flyway.baseline-description=Initial baseline
 spring.flyway.table=flyway_schema_history_user
 
 jwt.secret=${JWT_SECRET:your-secret-key-change-in-production-minimum-32-characters-for-hs256}
+
+# Redis configuration for caching
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
