--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -10,6 +10,9 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "redis": "^4.6.12",
+    "jsonwebtoken": "^9.0.2",
+    "amqplib": "^0.10.3"
   }
 }
