--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -254,3 +254,9 @@ networks:
 volumes:
   postgres_data:
   redis_data:
+  redis_cluster_master_1_data:
+  redis_cluster_master_2_data:
+  redis_cluster_master_3_data:
+  redis_cluster_replica_1_data:
+  redis_cluster_replica_2_data:
+  redis_cluster_replica_3_data:
