Add Google Cloud Storage integration and media upload features
- Integrate Google Cloud Storage for media service with signed URLs
- Add image editing features (crop, draw, text, emojis) in FilePreviewPanel
- Implement attachment button and emoji picker components
- Fix image rendering in chat window with proper error handling
- Increase media_url column size to TEXT to support long signed URLs
- Add CORS configuration for GCS bucket access
- Fix chat createdAt field mapping (snake_case to camelCase)
- Add file upload utilities with progress tracking
- Update docker-compose with GCS credentials configuration
- Fix linting issues (console.log to console.warn, remove unused imports)

--- a/backend/services/media-service/Dockerfile
+++ b/backend/services/media-service/Dockerfile
@@ -7,6 +7,9 @@ RUN npm install --production
 
 COPY . .
 
+# Create credentials directory for volume mount
+RUN mkdir -p /app/credentials
+
 EXPOSE 3002
 
 CMD ["node", "src/index.js"]
