--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ target/
 .env.local
 .env.*.local
 
+# Credentials and secrets
+**/credentials/
+**/*credentials*.json
+**/*service-account*.json
+
 # Logs
 logs/
 *.log
