--- a/backend/services/media-service/package.json
+++ b/backend/services/media-service/package.json
@@ -7,10 +7,11 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@google-cloud/storage": "^7.18.0",
+    "aws-sdk": "^2.1500.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "aws-sdk": "^2.1500.0"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
